--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ on:
   pull_request:
     branches: [ "main" ]
     types: ["merged", "closed"]
+  push:
+    branches: ["main"]
 
 jobs:
   build:
@@ -27,6 +29,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - run: npm install
     - run: npm run build --if-present
     - run: npm test
