--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,10 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
+# dodat deo za build fajl
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-output
+        path: build
+
